--- a/Valerio/style.css
+++ b/Valerio/style.css
@@ -4,10 +4,10 @@
 }
 
 body {
-  background: url(back.png);
+  background: url(images/back.png);
 }
 
-.bar {
+.navbarhome {
   display: flex;
   flex-direction: column;
   width: 20%;
@@ -19,32 +19,34 @@ body {
 .name {
   font-family: 'Herr Von Muellerhoff', cursive;
   font-size: 80px;
-  display: flex;
   margin-left: 260px;
   height: 80px;
   bottom: 23%;
   position: absolute;
   color: dimgray;
+  transition: 1s ease;
 }
 
-.about,
-.gallery,
-.contact {
+.chisono,
+.galleria,
+.contatti {
   font-family: 'Redressed', cursive;
   margin-right: 20px;
   font-size: 30px;
   color: dimgray;
   cursor: pointer;
   transition: color .3s;
+  text-decoration: none;
+  transition: 1s ease;
 }
 
-.about:hover,
-.gallery:hover,
-.contact:hover {
+.chisono:hover,
+.galleria:hover,
+.contatti:hover {
   color: black;
 }
 
-.main {
+.mainhome {
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -52,7 +54,7 @@ body {
   align-items: center;
 }
 
-img {
+#preview {
   border:solid 2px;
   border-bottom-color:#ffe;
   border-left-color:#eed;
@@ -82,4 +84,117 @@ img {
   width: 35vw;
   padding:4vmin;
   position:absolute;
+  transition: 1s ease;
+}
+
+.navbar {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 80px;
+}
+
+.bar {
+  display: flex;
+  justify-content: space-around;
+  width: 30%;
+  font-size: 20px;
+}
+
+.namenavbar {
+  font-family: 'Herr Von Muellerhoff', cursive;
+  color: dimgray;
+  margin-left: 30px;
+  cursor: pointer;
+}
+
+.gallerianavbar,
+.chisononavbar,
+.contattinavbar {
+  font-family: 'Redressed', cursive;
+  font-size: 30px;
+  color: dimgray;
+  cursor: pointer;
+  transition: color .3s;
+  text-decoration: none;
+}
+
+.gallerianavbar:hover,
+.chisononavbar:hover,
+.contattinavbar:hover {
+  color: black;
+}
+
+.gallery {
+  margin: 0 auto;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.column {
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+#fotogallery {
+  height: auto;
+  width: 600px;
+  margin: 5px;
+}
+
+.aboutme {
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.contacts {
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+}
+
+.profilo {
+  width: 400px;
+  height: auto;
+  margin-right: 10px;
+}
+
+.txt {
+  font-size: 30px;
+  width: 60%;
+}
+
+.slidename {
+  transform: translateX(-200px);
+}
+
+.slidegalleria {
+  transform: translateX(-150px);
+}
+
+.slidechisono {
+  transform: translateX(-100px);
+}
+
+.slidecontatti {
+  transform: translateX(-50px);
+}
+
+.slideframe {
+  transform: translateY(-100px);
 }
