--- a/Valerio/style.css
+++ b/Valerio/style.css
@@ -1,43 +1,75 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: black transparent;
+  scrollbar-radius: 20px;
+}
+
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: black;
+  border-radius: 20px;
 }
 
 body {
   background: url(images/back.png);
 }
 
+.home {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main {
+  position: relative;
+  height: 85vh;
+  min-height: 820px;
+  width: 37vw;
+  min-width: 690px;
+}
+
 .navbarhome {
+  position: absolute;
   display: flex;
   flex-direction: column;
-  width: 20%;
-  position: absolute;
-  bottom: 10%;
-  left: 500px;
+  align-items: flex-end;
+  left: -50%;
+  bottom: 3%;
 }
 
 .name {
   font-family: 'Herr Von Muellerhoff', cursive;
   font-size: 80px;
-  margin-left: 260px;
-  height: 80px;
-  bottom: 23%;
-  position: absolute;
+  height: 90px;
   color: dimgray;
   transition: 1s ease;
+  user-select: none;
 }
 
 .chisono,
 .galleria,
 .contatti {
   font-family: 'Redressed', cursive;
-  margin-right: 20px;
+  width: auto;
   font-size: 30px;
   color: dimgray;
   cursor: pointer;
   transition: color .3s;
   text-decoration: none;
   transition: 1s ease;
+  user-select: none;
 }
 
 .chisono:hover,
@@ -46,13 +78,6 @@ body {
   color: black;
 }
 
-.mainhome {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 #preview {
   border:solid 2px;
@@ -80,11 +105,12 @@ body {
   display:flex;
   justify-content: center;
   align-items: center;
-  height:80vh;
-  width: 35vw;
-  padding:4vmin;
-  position:absolute;
+  height: 100%;
+  width: 100%;
+  padding: 4vmin;
+  position: absolute;
   transition: 1s ease;
+  user-select: none;
 }
 
 .navbar {
@@ -93,8 +119,7 @@ body {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  font-size: 80px;
+  justify-content: center;
 }
 
 .bar {
@@ -105,10 +130,11 @@ body {
 }
 
 .namenavbar {
+  font-size: 80px;
   font-family: 'Herr Von Muellerhoff', cursive;
   color: dimgray;
-  margin-left: 30px;
   cursor: pointer;
+  user-select: none;
 }
 
 .gallerianavbar,
@@ -120,6 +146,7 @@ body {
   cursor: pointer;
   transition: color .3s;
   text-decoration: none;
+  user-select: none;
 }
 
 .gallerianavbar:hover,
@@ -129,7 +156,6 @@ body {
 }
 
 .gallery {
-  margin: 0 auto;
   width: 100%;
   height: auto;
   display: flex;
@@ -148,25 +174,19 @@ body {
   height: auto;
   width: 600px;
   margin: 5px;
+  user-select: none;
 }
 
 .aboutme {
   width: 100%;
-  height: 70vh;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  position: relative;
+  top: 100px;
 }
 
-.contacts {
-  width: 100%;
-  height: 70vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 50px;
-}
 
 .profilo {
   width: 400px;
@@ -177,6 +197,16 @@ body {
 .txt {
   font-size: 30px;
   width: 60%;
+}
+
+.contacts {
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
 }
 
 .slidename {
@@ -197,4 +227,116 @@ body {
 
 .slideframe {
   transform: translateY(-100px);
+}
+
+@media screen and (min-width: 1920px) {
+  .name {
+    font-family: 'Herr Von Muellerhoff', cursive;
+    font-size: 4.166666666666667vw;
+    height: 9.316770186335404vh;
+  }
+
+  .chisono,
+  .galleria,
+  .contatti {
+    font-family: 'Redressed', cursive;
+    width: auto;
+    font-size: 1.5625vw;
+    color: dimgray;
+    cursor: pointer;
+    transition: color .3s;
+    text-decoration: none;
+    transition: 1s ease;
+    user-select: none;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .main {
+    position: relative;
+    top: -10%;
+    height: 400px;
+    min-height: auto;
+    width: 90vw;
+    min-width: auto;
+  }
+
+  .navbarhome {
+    left: 0;
+    top: 100%;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .navbar {
+    flex-direction: column;
+  }
+
+  .namenavbar {
+    margin-left: 0;
+    font-size: 75px;
+    height: 100px;
+  }
+
+  .bar {
+    width: 100%;
+  }
+
+  #fotogallery {
+    width: 95vw;
+  }
+
+  .aboutme {
+    width: 100vw;
+    height: auto;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .profilo {
+    width: 70%;
+    height: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 0;
+    padding: 10px;
+  }
+
+  .txt {
+    font-size: 20px;
+    width: 70%;
+    text-align: justify;
+  }
+
+  .contacts {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    margin-top: 100px;
+  }
+
+.contacts {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  margin-top: 100px;
+  }
+
+  .contacts a {
+    color: black;
+    text-decoration: underline dimgray;
+  }
 }
