--- a/Valerio/style.css
+++ b/Valerio/style.css
@@ -252,6 +252,10 @@ body {
 }
 
 @media screen and (max-width: 1024px) {
+  .name {
+    font-size: 75px;
+  }
+
   .main {
     position: relative;
     top: -10%;
