--- a/Valerio/style.css
+++ b/Valerio/style.css
@@ -158,26 +158,17 @@ body {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  width: 100%;
+  margin: 0 auto;
+  width: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.bar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  width: 30%;
-  font-size: 20px;
+  -webkit-box-pack: space-around;
+      -ms-flex-pack: space-around;
+          justify-content: space-around;
 }
 
 .namenavbar {
@@ -185,6 +176,9 @@ body {
   font-family: 'Herr Von Muellerhoff', cursive;
   color: dimgray;
   cursor: pointer;
+  -webkit-transition: color .3s;
+  -o-transition: color .3s;
+  transition: color .3s;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -208,6 +202,7 @@ body {
           user-select: none;
 }
 
+.namenavbar:hover,
 .gallerianavbar:hover,
 .chisononavbar:hover,
 .contattinavbar:hover {
@@ -392,20 +387,15 @@ body {
   }
 
   .navbar {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    width: 100%;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 
   .namenavbar {
     margin-left: 0;
     font-size: 75px;
     height: 100px;
-  }
-
-  .bar {
-    width: 100%;
   }
 
   #fotogallery {
