work in progress

--- a/Valerio/style.css
+++ b/Valerio/style.css
@@ -242,6 +242,13 @@ body {
           user-select: none;
 }
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
 .navbar {
   position: -webkit-sticky;
   position: sticky;
