--- a/Valerio/style.css
+++ b/Valerio/style.css
@@ -114,12 +114,8 @@ body {
 }
 
 .home {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
   width: 100vw;
-  height: auto;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -251,7 +247,6 @@ body {
   bottom: 0;
   width: 100%;
   text-align: center;
-  margin-top: 100px;
 }
 
 .navbar {
@@ -457,10 +452,6 @@ body {
 }
 
 @media screen and (max-width: 1024px) {
-  .home {
-    top: 40%;
-  }
-
   .name {
     font-size: 75px;
   }
@@ -548,5 +539,9 @@ body {
     color: black;
     -webkit-text-decoration: underline dimgray;
             text-decoration: underline dimgray;
+  }
+
+  .footer {
+    top: 0;
   }
 }
