--- a/Valerio/style.css
+++ b/Valerio/style.css
@@ -238,35 +238,23 @@ body {
 
 .gallery {
   position: relative;
+  top: 1vh;
   width: 80%;
   height: auto;
   margin: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  column-count: 3;
+  column-gap: 5px;
+  line-height: 0;
 }
 
-.column {
-  width: auto;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+.gallery a > img:only-child {    /*eliminate extra space at the bottom*/
+  display: block;
 }
 
 #fotogallery {
   height: auto;
-  width: 25vw;
-  margin: 5px;
+  width: 100%;
+  margin-bottom: 5px;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -342,19 +330,29 @@ body {
   }
 
   .main {
-    height: 400px;
+    height: 700px;
     min-height: auto;
-    width: 90vw;
-    min-width: 90vw;
+    width: 70vw;
+    min-width: auto;
   }
 
   .gallery {
-    width: 100%;
+    column-count: 2;
     margin-top: 100px;
   }
 
-  #fotogallery {
-    width: 95vw;
+  @media screen and (max-width: 500px) {
+    .main {
+      height: 400px;
+      min-height: auto;
+      width: 90vw;
+      min-width: auto;
+    }
+
+    .gallery {
+      column-count: 1;
+      width: 90%;
+    }
   }
 
   .profilo {
