--- a/Valerio/style.css
+++ b/Valerio/style.css
@@ -325,8 +325,9 @@ body {
   .links {
     border: 0;
     border-radius: 10px;
-    background: rgba(255, 255, 255, .3);
+    background: rgba(255, 255, 255, 0.3);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
   }
 
   .main {
